--- a/registration/package.json
+++ b/registration/package.json
@@ -13,6 +13,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.0"
+    "mailgun": "^0.5.0",
+    "mailgun-js": "^0.22.0",
+    "mongoose": "^5.13.0",
+    "nodemailer": "^6.6.2"
   }
 }
